--- a/signUp.html
+++ b/signUp.html
@@ -16,7 +16,7 @@
             <input type="text" name="email" placeholder="Email">
             <input type="password" name="password" placeholder="Password">
             <input type="password" name="recheck-password" placeholder="Retype Password">
-            <a href="Login-page.html"><input type="submit" name="signup-button" value="log In"></a>
+            <a href="login.html"><input type="submit" name="signup-button" value="log In"></a>
             <a href="index.html" class="back">Back</a>
         </div>
 
