--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <li><a href="#">Contact</a></li>
         </ul>
         <ul class="right">
-            <li><a href="Login-page.html">LogIn</a></li>
-            <li><a href="signup.html">SignUp</a></li>
+            <li><a href="login.html">LogIn</a></li>
+            <li><a href="signUp.html">SignUp</a></li>
 
         </ul>
     </div>
