--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
         </div>
         <input type="button" value="SignIn" class="btn">
         <a href="index.html" class="button" style="margin-right: 10px;">Back</a>
-        <a href="signup.html" class="button">SignUp</a>
+        <a href="signUp.html" class="button">SignUp</a>
     </div>
 
 </body>
