--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <ul class="right">
             <li><a href="login.html">LogIn</a></li>
             <li><a href="signUp.html">SignUp</a></li>
+            <li><a href="home.html">HOME</a></li>
 
         </ul>
     </div>
